--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@ display: none;
 	filter: sepia(100%);
 }
 .fade-carousel .slides .slide-1 {
-  background-image: url(file:///Users/matthewstockmal/Downloads/HinsdaleTimeMachine.049%20copy.jpeg); 
+  background-image: url(images/HinsdaleTimeMachine.049%20copy.jpeg); 
 }
 .fade-carousel .slides .slide-2 {
-  background-image: url(file:///Users/matthewstockmal/Downloads/304SLincoln12.jpg);
+  background-image: url(images/304SLincoln12.jpg);
 }
 .fade-carousel .slides .slide-3 {
-  background-image: url(file:///Users/matthewstockmal/Downloads/4WashingtonCircle.jpg);
+  background-image: url(images/4WashingtonCircle.jpg);
 }
 
 /********************************/
