--- a/Index.html
+++ b/Index.html
@@ -271,15 +271,15 @@ transform:none;
   <h3 style="font-size: 3em; font-weight: bold;"><span class="cursive inBetween">Protect</span></h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <img src="file:///Users/matthewstockmal/Downloads/HinsdaleTimeMachine.049%20copy.jpeg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="images/HinsdaleTimeMachine.049%20copy.jpeg" class="img-responsive" style="width:100%" alt="Image">
       <div class="centered">Certificate of Appropriateness</div>
     </div>
    <div class="col-sm-4">
-      <img src="file:///Users/matthewstockmal/Downloads/HinsdaleTimeMachine.049%20copy.jpeg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="images/304SLincoln12.jpg" class="img-responsive" style="width:100%" alt="Image">
       <div class="centered">Landmarking</div>
     </div>
     <div class="col-sm-4">
-      <img src="file:///Users/matthewstockmal/Downloads/HinsdaleTimeMachine.049%20copy.jpeg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="images/4WashingtonCircle.jpg" class="img-responsive" style="width:100%" alt="Image">
       <div class="centered">Historic Districts</div>
     </div>
   </div>
