--- a/Index.html
+++ b/Index.html
@@ -28,9 +28,11 @@
 			.fade-carousel {
 				position: relative;
 				height: 60vh;
+				max-height: 700px;
 			}
 			.fade-carousel .carousel-inner .item {
 				height: 60vh;
+				max-height: 700px;
 			}
 			.fade-carousel .carousel-indicators > li {
 				display: none;
@@ -126,6 +128,7 @@
 			.fade-carousel .slides .slide-2,
 			.fade-carousel .slides .slide-3 {
 				height:60vh;
+				max-height: 700px;
 				background-size: cover;
 				background-position: center center;
 				background-repeat: no-repeat;
