--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/bootstrap-xxs.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -312,7 +313,7 @@
 			<div class="row">
 				<a href="http://www.villageofhinsdale.org/residents/village_history/index.php">
 					<div class="col-sm-4">
-						<img src="images/120SElm.jpg" class="img-responsive" style="width:100%" alt="Image">
+						<img src="images/120SElm.jpg" class="" style="width:100%" alt="Image">
 						<div class="centered">Village History</div>
 					</div>
 				</a>
