--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Monsieur+La+Doulaise" rel="stylesheet">
-		<script>
-  function resizeIframe(obj) {
-    obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
-  }
-</script>
 
 		<style>
 			/*
@@ -259,7 +254,9 @@
 							<h1><span class="cursive">Protect</span></h1>        
 							<h3>Through historic landmarking, districting, and review</h3>
 						</hgroup>
-						<button class="btn btn-hero btn-lg" role="button">Learn More</button>
+						<a href="http://www.villageofhinsdale.org/residents/village_history/view_designated_landmarks_(text).php">
+							<button class="btn btn-hero btn-lg" role="button">Learn More</button>
+						</a>
 					</div>
 				</div>
 				<div class="item slides">
@@ -268,8 +265,11 @@
 						<hgroup>
 							<h1><span class="cursive">Educate</span></h1>        
 							<h3>Learn about village history, architects, and landmarks</h3>
-						</hgroup>       
-						<button class="btn btn-hero btn-lg" role="button">Learn More</button>
+						</hgroup>  
+						<a href="http://www.villageofhinsdale.org/residents/village_history/index.php">
+							<button class="btn btn-hero btn-lg" role="button">Learn More</button>
+						</a>
+						
 					</div>
 				</div>
 				<div class="item slides">
@@ -279,7 +279,10 @@
 							<h1><span class="cursive">Benefit</span></h1>        
 							<h3>Through guides to tax freezes and other resources</h3>
 						</hgroup>
-						<button class="btn btn-hero btn-lg" role="button">Learn More</button>
+						<a href="http://www.villageofhinsdale.org/residents/village_history/state_of_illinois_tax_incentives.php">
+							<button class="btn btn-hero btn-lg" role="button">Learn More</button>
+						</a>
+						
 					</div>
 				</div>
 			</div> 
